[package]
name = "cc-version"
version = "0.1.1-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/gcc-version"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "cc version detection for build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.58"
thiserror = "1.0.20"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "cc-version = \"[a-z0-9\\.-]+\"", replace = "cc-version = \"{{version}}\""},
]
